# FR2DEulerSolver

./: CMakeLists.txt  README.md  main.cpp
include/: corr_f.h  euler_eq.h  flux_utils.h  fr_solver.h  mesh.h  shape_f.h  thread_pool.h  type_def.h  vtu.h
src/: corr_f.cpp  euler_eq.cpp  flux_utils.cpp  fr_solver.cpp  mesh.cpp  shape_f.cpp  thread_pool.cpp  type_def.cpp  vtu.cpp
src/cpu/: fr_solver.cpp
src/cuda/: fr_solver.cu
src_cpu/: CMakeLists.txt
src_cuda/: CMakeLists.txt
test/: CMakeLists.txt  corr_f_test.cpp  euler_eq_test.cpp  flux_utils_test.cpp  fr_solver_test.cpp  mesh_test.cpp  shape_f_test.cpp  thread_pool_test.cpp
